# Dr

bodyguard_drone_ws/: .gitignore  DEPLOYMENT.md  GETTING_STARTED.md  LICENSE  PROJECT_DOCUMENTATION.md  PROJECT_SUMMARY.md  README.md  TROUBLESHOOTING.md  install_dependencies.sh  quick_start.sh  quick_tmux.sh  requirements.txt  setup_audio_vnc.sh  start_drone_tmux.sh  test_fixes.sh  test_installation.sh  test_yolo.py
bodyguard_drone_ws/src/bodyguard_drone/: CMakeLists.txt  package.xml  setup.py
bodyguard_drone_ws/src/bodyguard_drone/bodyguard_drone/: __init__.py  command_parser_node.py  drone_control_node.py  mission_controller_node.py  navigation_node.py  perception_node.py  tts_node.py  user_event_node.py  voice_cmd_node.py
bodyguard_drone_ws/src/bodyguard_drone/config/: bodyguard_drone.rviz
bodyguard_drone_ws/src/bodyguard_drone/launch/: full_demo.launch.py  mission_demo.launch.py
bodyguard_drone_ws/src/bodyguard_drone/models/drone/: model.config  model.sdf
bodyguard_drone_ws/src/bodyguard_drone/models/person_with_ring/: model.config  model.sdf
bodyguard_drone_ws/src/bodyguard_drone/msg/: DINOv3Features.msg  Detection.msg  DetectionArray.msg  NavigationInstruction.msg  UserEvent.msg  VoiceCommand.msg
bodyguard_drone_ws/src/bodyguard_drone/resource/: bodyguard_drone
bodyguard_drone_ws/src/bodyguard_drone/worlds/: bodyguard_world.sdf
